# ccmonitor

./: .ccmonitor_state.pkl  .coveragerc  .gitignore  ACTIVE_TODOS.md  ANALYSIS.md  AST_TOOLS_GUIDE.md  CLAUDE.md  CLEAN_CODE_ANALYSIS.md  CLEAN_CODE_SUMMARY.md  CLI_FLAGS.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  COMPREHENSIVE_TEST_COVERAGE_PLAN.md  CURRENT_STATE_ANALYSIS.md  PHASE5_OPTIMIZATION_REPORT.md  PHASE5_SUMMARY.md  PHASE_3_COMPLETION_UPDATE.md  PHASE_3_SUMMARY.md  PHASE_4.6_INTEGRATION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PLAN.md  PRP_EXECUTION_REPORT_TESTING_QA.md  PYTEST_COVERAGE_ANALYSIS_FINAL_REPORT.md  README.md  REFACTORING_GUIDE.md  TEST_COVERAGE_IMPLEMENTATION_SUMMARY.md  USAGE.md  cleanup_and_ultra_prune.py  cleanup_claude_projects.py  comprehensive_code_review.md  conversation_dependency_tracker.py  coverage.json  demo_claude_monitoring.py  demo_filter_integration.py  demo_loading_widgets.py  demo_message_categorizer.py  demo_phase3_safety.py  lint_by_file.sh  main.py  main_with_pruning.py  (+23 more)
.claude/: memory.jsonl  settings.json  settings.json.bak  settings.local.json  statusline.sh
.claude/agents/: ccmonitor-comprehensive-testing-specialist.md  cli-automation-architect.md  code-quality-specialist.md  core-pruning-engineer.md  data-processing-specialist.md  fastapi-click-specialist.md  jsonl-analysis-specialist.md  monitoring-logging-specialist.md  pydantic-models-specialist.md  safety-validation-expert.md  sqlalchemy-database-specialist.md  testing-specialist.md  textual-tui-specialist.md
.claude/hooks/: README.md  SOLUTION_SUMMARY.md  UV_HOOKS_DOCUMENTATION.md  migrate_to_uv.sh  pyproject.toml  quality_gate.py  quality_gate.sh  run-hook.sh  subagentstop_todo_reminder.py  test_hook_directly.py  test_hooks.py  test_integration.py  test_pre_tool_use.py
.claude/hooks/hooks/: __init__.py  notification.py  post_tool_use.py  pre_tool_use.py  session_start.py  stop.py  user_prompt_submit.py
.claude/hooks/tests/: __init__.py  test_activity_detector.py  test_rate_limiter.py  test_todo_reminder.py
.claude/hooks/utils/: __init__.py  activity_detector.py  rate_limiter.py
.claude/scripts/: uv_runner.sh
.claude/state/: rate_limits.json
.github/workflows/: claude-code.yml  comprehensive-testing.yml  tui-tests.yml
.planning/testing/: 00_testing_overview.md  01_textual_integration_tests.md  02_widget_specific_tests.md  03_visual_accessibility_testing.md  04_performance_benchmarks.md
PRPs/: 001-tdd-prp-infrastructure.md  002-project-manager-agent.md  003-todo-update-hook.md  004-todo-prp-orchestrator.md  005-prp-aware-agents.md  006-multi-agent-prp-orchestration.md  __init__.py  development.db  infrastructure_validation_report.md  knowledge_graph.db  learning_optimization.db  monitoring.db
PRPs/active/: prp-phase1-jsonl-analysis.md  prp-phase2-core-pruning-engine.md  prp-phase3-safety-validation.md  prp-phase4-cli-automation.md
PRPs/ai_docs/: project_management_patterns.md  tdd_patterns.md  validation_guide.md
PRPs/config/: development.yaml  production.yaml
PRPs/context_cache/: .gitkeep
PRPs/doing/: 04_navigation_and_interaction.md
PRPs/done/: 01_project_setup_and_structure.md  02_application_framework.md  03_layout_system.md  05_responsive_terminal_handling.md  08_testing_and_quality_assurance.md  09_integration_and_cli_compatibility.md
PRPs/scripts/: __init__.py  advanced_monitoring_system.py  batch_enhance_agents.py  context_injector.py  integration_deployment_system.py  intelligent_project_analyzer.py  orchestrator_main.py  (+10 more)
docs/: CLI_Usage.md  JSONL_PARSER.md  PROJECT_README.md  README.md  analysis_report.md  cleanup_and_ultra_prune.md  cleanup_claude_projects.md  cli_guide.md  importance_engine.md  main_with_pruning.md  temporal_analysis.md
examples/: jsonl_parser_demo.py
fix/: README.md
lint_report/: format_check.txt  parse_python_lints.py  raw_mypy_output.txt  raw_ruff_output.txt  ruff_output.json  statistics.txt  summary.txt
src/: __init__.py
tests/: __init__.py  conftest.py  test_conversation_integrity.py  test_edge_cases.py  test_performance.py  test_pruning.py  test_safety.py
utils/: __init__.py  dependency_analyzer.py  todo_parser.py
(+203 files in other folders)
