[project]
name = "claude-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "colorama>=0.4.6",
    "fastapi>=0.104.0",
    "jsonschema>=4.25.0",
    "numpy>=1.24.0",
    "orjson>=3.11.1",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0",
    "regex>=2025.7.34",
    "scikit-learn>=1.3.0",
    "sqlite-utils>=3.38",
    "structlog>=25.4.0",
    "tqdm>=4.66.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
claude-prune = "src.cli.main:cli"
