[project]
name = "ccmonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "colorama>=0.4.6",
    "fastapi>=0.104.0",
    "jsonschema>=4.25.0",
    "numpy>=1.24.0",
    "orjson>=3.11.1",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0",
    "regex>=2025.7.34",
    "scikit-learn>=1.3.0",
    "sqlite-utils>=3.38",
    "structlog>=25.4.0",
    "tqdm>=4.66.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "types-psutil>=5.9.5",
]

[project.scripts]
ccmonitor = "src.cli.main:cli"

[tool.black]
line-length = 79
target-version = ["py311"]
skip-string-normalization = false
preview = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pylint]
max-statements = 30

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "click",
    "click.*",
    "colorama",
    "colorama.*"
]
ignore_missing_imports = true
